--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -88,7 +88,7 @@
                                 <div class="opening-title en" id="opening-title">NEXT GOLF<br class="br-374"> COMMUNITY</div>
                                 <span class="opening-partition" id="opening-partition"></span>
                                 <div id="opening-ani-end">
-                                <a href="#" class="js-hover-animation">
+                                <a href="#" class="js-hover-animation openlink">
                                     <h1>“津カントリー倶楽部の軌跡を辿る”</h1>
                                     <p class="en">OUR STORY</p>
                                 </a>
