--- a/templates/page.community.liquid
+++ b/templates/page.community.liquid
@@ -1,1 +1,224 @@
-<h1>ネクストゴルフコミュニティ</h1>
+
+  
+  <div class="site__main__contents" data-scroll-container>
+    
+    <section class="top-bg" id="top-bg" data-scroll-section>
+      <div class="top-bg__inner" id="top-bg-inner-js">
+        <div class="top-bg__contents">
+          
+          <div class="top-bg__center">
+              <div class="top-bg__center__list">
+                <article class="top-bg__center__item" id="top-bg__item__01">
+                  <div class="top-bg__txt-first">
+                    <h1 class="en">NEXT GOLF COMMUNITY</h1>
+                    <h2>次世代ゴルフコミュニティ</h2>
+                    <p>−50万坪をあなたのお庭に−</p>
+                  </div>
+                </article>
+                <article class="top-bg__center__item" id="top-bg__item__02">
+                  <div class="top-bg__txt-second">
+                    <h2 class="top-bg-heading-lv2">真のゴルフライフ、<br>目指すのはNo.<span class="text-combine">１</span>だ。</h2>
+                    <p class="top-bg-sentence">ゴルフに対する誰にも負けない愛情。純粋にゴルフが好きだから、その本当の魅力を多くの人に味わってもらいたいと思っていた。それは子供が大切にしている宝物を友達に自慢するようなものだ。「真のゴルフファンだけが集い、語らい、プレイする」この理想のゴルフ場を作りたい一途な思い。それしかなかった。
+                    </p>
+                    <div class="top-story">
+                      <span class="en">STORY</span>
+                      <div class="top-scroll-bar"></div>
+                    </div>
+                  </div>
+                </article>
+                <article class="top-bg__center__item" id="top-bg__item__03">
+                  <div class="top-bg__txt-third">
+                    <h2 class="top-bg-heading-lv2">ゴルフを愛している。</h2>
+                    <p class="top-bg-sentence line-stopper">
+                      本当の素晴らしさを伝えたいと思った。<br>
+                      知りうる限りでは、真のゴルフライフ、クラブライフを満喫できるところはなかった。<br>
+                      だから我々は世界トップランクのゴルフ場を目指す。そう誓った。
+                    </p>
+                    <p class="top-bg-sentence">
+                      候補地探しをしている我々の前に、チャンスはやってきた。<br>
+                      遥か伊勢湾を望む三重県津市の丘陵地。<br>
+                      50万坪の大自然の地が候補地に名乗りを挙げた。<br>
+                      250人もの地権者によって守られていた土地が生まれ変わる時を待っていた。
+                    </p>
+                  </div>
+                </article>
+                <article class="top-bg__center__item" id="top-bg__item__04">
+                  <div class="top-bg__txt-fourth">
+                    <h2 class="top-bg-heading-lv2">協議は何度も<br class="br-768">繰り返された。</h2>
+                    <p class="top-bg-sentence">
+                      一人一人が土地に対する思い入れが違う。<br>
+                      それぞれが、愛情や慈しみの気持ちを語る。<br>
+                      私たちも見続けている夢のことや、情熱を語った。<br>
+                      この美しい自然をどう活かすか。<br>
+                      理解し合えるまでじっくりと話し合い、<br>
+                      共感、共鳴が生まれていった。
+                    </p>
+                  </div>
+                </article>
+              </div>
+          </div>
+
+          <div class="top-bg__images">
+            <div id="top-bg__images__js" data-scroll data-scroll-sticky data-scroll-target="#top-bg-inner-js">
+              <div class="top-bg__images__inner">
+                <ul class="top-bg__images__gallery">
+                  <li id="top-bg__images__list1" class="js-active">
+                    <picture>
+                      <img srcset="./img/top-sec01-bg.jpg">
+                    </picture>
+                  </li>
+                  <li id="top-bg__images__list2">
+                    <picture>
+                      <img srcset="./img/top-sec02-bg.jpg">
+                    </picture>
+                  </li>
+                  <li id="top-bg__images__list3">
+                    <picture>
+                      <img srcset="./img/top-sec03-bg.jpg">
+                    </picture>
+                  </li>
+                </ul>                
+              </div>
+            </div>
+          </div>
+
+          <div class="top-bg__images--sp">
+            <ul>
+              <li id="top-bg__images__list1--sp" class="js-active"><img src="./img/top-sec01-bg--sp.jpg"></li>
+              <li id="top-bg__images__list2--sp"><img src="./img/top-sec02-bg--sp.jpg"></li>
+              <li id="top-bg__images__list3--sp"><img src="./img/top-sec03-bg--sp.jpg"></li>
+            </ul>
+          </div>
+
+        </div>
+    </div>
+    </section>
+
+    <section class="top-gallery" data-scroll-section data-scroll-section-inview>
+      <div class="top-gallery__wrap">
+        <ul class="loop-left">
+          <li class="top-gallery__item"><img src="./img/gallery01.jpg" alt=""></li>
+          <li class="top-gallery__item"><img src="./img/gallery02.jpg" alt=""></li>
+          <li class="top-gallery__item"><img src="./img/gallery03.jpg" alt=""></li>
+          <li class="top-gallery__item"><img src="./img/gallery04.jpg" alt=""></li>
+        </ul>
+        <ul class="loop-left">
+          <li class="top-gallery__item"><img src="./img/gallery01.jpg" alt=""></li>
+          <li class="top-gallery__item"><img src="./img/gallery02.jpg" alt=""></li>
+          <li class="top-gallery__item"><img src="./img/gallery03.jpg" alt=""></li>
+          <li class="top-gallery__item"><img src="./img/gallery04.jpg" alt=""></li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="top-info" data-scroll-section >
+      <div class="top-info__inner">
+        <div class="top-info__concept">
+          <h2 data-scroll>上質な刻<br>感動な出会い</h2>
+          <div class="partition" data-scroll></div>
+          <div class="top-info__concept-discri">
+            <h3 class="en" data-scroll>Concept</h3>
+            <p data-scroll>
+              伝統のスタイルと品格に満ちたハイクオリティなクラブライフ。<br>
+              ゲストの皆様が最高のドラマを演じるにふさわしい、誇り高きステータスと優雅な気品にあふれたステージをご用意しております。<br>
+              選ばれたメンバーが集い、語らい、プレイする。<br>
+              一打一打に一喜一憂し、いくつもの感動や歓びのシーンが繰り広げられる・・・そんなゴルフの真の魅力にふれ、価値ある「刻」を堪能していただく楽しみをご提供いたします。
+            </p>
+          </div>
+        </div>
+        <div class="top-info__location">
+          <div class="top-info__location-discri">
+            <h3 class="en">Location</h3>
+            <p>
+              三重県津市にある津カントリー俱楽部。古くは港町として栄えた津は<br>
+              「伊勢 は津でもつ津は伊勢でもつ、尾張名古屋は城でもつ」<br>
+              との伊勢音頭に謡われ、まさに伊勢神宮への玄関口。山間には清少納言が名付けた日本三大名泉、「湯ごりの地」榊原温泉郷を有しています。1990 年に開場以来、津椿神社をお祀りし、土地の波動を高めて参りました。
+            </p>
+          </div>
+          <div class="partition"></div>
+          <h2>
+            <span class="first-line">神のくに伊勢の</span><br>玄関口として
+          </h2>
+        </div>
+        <div class="top-info__environment">
+          <h2>
+            社会貢献<br><span class="second-line">環境保護の活動</span>
+          </h2>
+          <div class="partition"></div>
+          <div class="top-info__environment-discri">
+            <h3 class="en">Environment</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="top-about" data-scroll-section >
+      <div class="top-about__inner">
+        <h2 class="en">NEXT GOLF COMMUNITY</h2>
+        <h3>ゴルフ“だけ”ではないゴルフ場</h3>
+        <p>
+          私たちは ゴルフを通じた健康、仲間づくりの大切さから<br>
+          NEXT GOLF COMMUNITY を提唱して参りました。<br>
+          また、50 万坪をお庭のようにお使いいただける 19 番ホール<br>
+          KATADA LODGE&VILLA の建築や設えも NON ゴルファーの方にも好評で、<br>
+          加子母ヒノキを用いた唯一無二の空間をお愉しみいただいております。
+        </p>
+      </div>
+    </section>
+
+    <section class="top-tab" data-scroll-section >
+      <ul class="tab__menu">
+        <li class="tab-menu__item"><span class="en tab-trigger js-tab-trigger is-active" data-id="tab01">Lodge&Villa</span></li>
+        <li class="tab-menu__item"><span class="en tab-trigger js-tab-trigger" data-id="tab02">BBQガーデン</span></li>
+        <li class="tab-menu__item"><span class="en tab-trigger js-tab-trigger" data-id="tab03">19番ホールをお庭のように</span></li>
+      </ul>
+      <div class="tab__content">
+        <div class="tab-content__item js-tab-target is-show" id="tab01">
+          <div class="tab-content__item--left">
+            <span class="sub-title">
+              サブタイトル
+            </span>
+            <h2 class="en">Lodge&Villa</h2>
+            <p>Lodgeを建てた時の想い、今どのように使われていて、どんなコミュニケーションが生まれて何を感じているのか今後どうして行きたいのかの文章200文字程度</p>
+          </div>
+          <div class="tab-content__item--right">
+            <img src="./img/hinoki-bath.png" alt="檜風呂">
+          </div>
+        </div>
+        <div class="tab-content__item js-tab-target" id="tab02">
+          <div class="tab-content__item--left">
+            <span class="sub-title">
+              サブタイトル
+            </span>
+            <h2 class="en">BBQガーデン</h2>
+            <p>BBQガーデンを建てた時の想い、今どのように使われていて、どんなコミュニケーションが生まれて何を感じているのか今後どうして行きたいのかの文章200文字程度</p>
+          </div>
+          <div class="tab-content__item--right">
+            <img src="./img/restaurant.png" alt="田園レストラン">
+          </div>
+        </div>
+        <div class="tab-content__item js-tab-target" id="tab03">
+          <div class="tab-content__item--left">
+            <span class="sub-title">
+              サブタイトル
+            </span>
+            <h2 class="en">特別な19番ホール</h2>
+            <p>19番ホールは今どのように使われていて、どんなコミュニケーションが生まれて何を感じているのか今後どうして行きたいのかの文章200文字程度</p>
+          </div>
+          <div class="tab-content__item--right">
+            <img src="./img/stage.png" alt="野外ステージ">
+          </div>
+        </div>
+      </div>
+      <!-- <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div> -->
+      <div class="top-message">
+        今後は地域社会の宝物として、ニッポンの素晴らしさを<br>
+        次世代へつなぐ役割 を志高く、メンバーの皆様と共に果たして参りたいと願っています。<br>
+        引き続きご 家族・ご友人の皆様と共にご利用、ご支援の程お願い申し上げます。
+      </div>
+    </section>
+
+
+
