バリエーション選択状態でカート追加まで確認 2207032338

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -118,6 +118,7 @@
 
             {%endif%}
         
+        {{ 'theme.js' | asset_url | script_tag }}
         {{ 'main.js' | asset_url | script_tag }}
     </body>
 </html>
