ストーリーページのヘッダーを削除

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -62,7 +62,11 @@
      {% else %}
     <body>
     {% endif %}
-    {% section 'header' %}
+
+
+    {% if template != 'page.community' %}
+        {% section 'header' %}
+    {%endif%}
 
 
 
