--- a/templates/page.community.liquid
+++ b/templates/page.community.liquid
@@ -64,17 +64,17 @@
                 <ul class="top-bg__images__gallery">
                   <li id="top-bg__images__list1" class="js-active">
                     <picture>
-                      <img srcset="./img/top-sec01-bg.jpg">
+                      <img srcset="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/top-sec01-bg.jpg?v=1656842990">
                     </picture>
                   </li>
                   <li id="top-bg__images__list2">
                     <picture>
-                      <img srcset="./img/top-sec02-bg.jpg">
+                      <img srcset="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/top-sec02-bg.jpg?v=1656842990">
                     </picture>
                   </li>
                   <li id="top-bg__images__list3">
                     <picture>
-                      <img srcset="./img/top-sec03-bg.jpg">
+                      <img srcset="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/top-sec03-bg.jpg?v=1656842991">
                     </picture>
                   </li>
                 </ul>                
@@ -84,9 +84,9 @@
 
           <div class="top-bg__images--sp">
             <ul>
-              <li id="top-bg__images__list1--sp" class="js-active"><img src="./img/top-sec01-bg--sp.jpg"></li>
-              <li id="top-bg__images__list2--sp"><img src="./img/top-sec02-bg--sp.jpg"></li>
-              <li id="top-bg__images__list3--sp"><img src="./img/top-sec03-bg--sp.jpg"></li>
+              <li id="top-bg__images__list1--sp" class="js-active"><img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/top-sec01-bg--sp.jpg?v=1656842990"></li>
+              <li id="top-bg__images__list2--sp"><img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/top-sec02-bg--sp.jpg?v=1656842990"></li>
+              <li id="top-bg__images__list3--sp"><img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/top-sec03-bg--sp.jpg?v=1656842990"></li>
             </ul>
           </div>
 
@@ -97,16 +97,16 @@
     <section class="top-gallery" data-scroll-section data-scroll-section-inview>
       <div class="top-gallery__wrap">
         <ul class="loop-left">
-          <li class="top-gallery__item"><img src="./img/gallery01.jpg" alt=""></li>
-          <li class="top-gallery__item"><img src="./img/gallery02.jpg" alt=""></li>
-          <li class="top-gallery__item"><img src="./img/gallery03.jpg" alt=""></li>
-          <li class="top-gallery__item"><img src="./img/gallery04.jpg" alt=""></li>
+          <li class="top-gallery__item"><img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/gallery01.jpg?v=1656842967" alt=""></li>
+          <li class="top-gallery__item"><img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/gallery02.jpg?v=1656842967" alt=""></li>
+          <li class="top-gallery__item"><img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/gallery03.jpg?v=1656842967" alt=""></li>
+          <li class="top-gallery__item"><img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/gallery04.jpg?v=1656842967" alt=""></li>
         </ul>
         <ul class="loop-left">
-          <li class="top-gallery__item"><img src="./img/gallery01.jpg" alt=""></li>
-          <li class="top-gallery__item"><img src="./img/gallery02.jpg" alt=""></li>
-          <li class="top-gallery__item"><img src="./img/gallery03.jpg" alt=""></li>
-          <li class="top-gallery__item"><img src="./img/gallery04.jpg" alt=""></li>
+          <li class="top-gallery__item"><img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/gallery01.jpg?v=1656842967" alt=""></li>
+          <li class="top-gallery__item"><img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/gallery02.jpg?v=1656842967" alt=""></li>
+          <li class="top-gallery__item"><img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/gallery03.jpg?v=1656842967" alt=""></li>
+          <li class="top-gallery__item"><img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/gallery04.jpg?v=1656842967" alt=""></li>
         </ul>
       </div>
     </section>
@@ -179,10 +179,10 @@
               サブタイトル
             </span>
             <h2 class="en">Lodge&Villa</h2>
-            <p>Lodgeを建てた時の想い、今どのように使われていて、どんなコミュニケーションが生まれて何を感じているのか今後どうして行きたいのかの文章200文字程度</p>
+            <p>日本のゴルフリゾートの新たなスタンダードとなるようなアコモデーション、「片田ロッジ＆ヴィラ」が2018年に完成した。ロッジ棟は快眠を約束する2タイプのユニークなツインのベットルーム4部屋にラボと言われる小さなビジネスセンターのようなスペースがある。空間はミニマリズムに。必要最小限で心地よさや美しさを感じさせる設計になっています。</p>
           </div>
           <div class="tab-content__item--right">
-            <img src="./img/hinoki-bath.png" alt="檜風呂">
+            <img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/hinoki-bath.png?v=1656842967" alt="檜風呂">
           </div>
         </div>
         <div class="tab-content__item js-tab-target" id="tab02">
@@ -194,7 +194,7 @@
             <p>BBQガーデンを建てた時の想い、今どのように使われていて、どんなコミュニケーションが生まれて何を感じているのか今後どうして行きたいのかの文章200文字程度</p>
           </div>
           <div class="tab-content__item--right">
-            <img src="./img/restaurant.png" alt="田園レストラン">
+            <img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/restaurant.png?v=1656842990" alt="田園レストラン">
           </div>
         </div>
         <div class="tab-content__item js-tab-target" id="tab03">
@@ -203,10 +203,10 @@
               サブタイトル
             </span>
             <h2 class="en">特別な19番ホール</h2>
-            <p>19番ホールは今どのように使われていて、どんなコミュニケーションが生まれて何を感じているのか今後どうして行きたいのかの文章200文字程度</p>
+            <p>津カントリー俱楽部ではこれまで、さまざまなチャリティを開催してきました。今回、ご来場の皆様に、1コインで腕試しをしながらチャリティもできる19番ホールを新設いたしました。いただいたチャリティ基金は、11月に開催される「全国身体障がい者ゴルフ大会　ザ・チャレンジドゴルフトーナメント」「海難遺児育英会」「三重県内児童養護施設」へチャリティさせていただきます。</p>
           </div>
           <div class="tab-content__item--right">
-            <img src="./img/stage.png" alt="野外ステージ">
+            <img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/stage.png?v=1656842990" alt="野外ステージ">
           </div>
         </div>
       </div>
@@ -219,6 +219,8 @@
         引き続きご 家族・ご友人の皆様と共にご利用、ご支援の程お願い申し上げます。
       </div>
     </section>
+
+
 
 
 
