ストーリーページ反映

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1086,6 +1086,10 @@ body {
   color: #6f7d6d;
 }
 
+.community__home{
+  margin: 0 auto;
+}
+
 .pageVisual {
   position: relative;
   margin-bottom: 13vw;
