--- a/templates/page.community.liquid
+++ b/templates/page.community.liquid
@@ -218,7 +218,12 @@
         次世代へつなぐ役割 を志高く、メンバーの皆様と共に果たして参りたいと願っています。<br>
         引き続きご 家族・ご友人の皆様と共にご利用、ご支援の程お願い申し上げます。
       </div>
+
+      <a href="{{shop.url}}" class="media__btn community__home">ホームに戻る</a>
     </section>
+
+
+
 
 
 
