--- a/templates/page.community.liquid
+++ b/templates/page.community.liquid
@@ -219,7 +219,7 @@
         引き続きご 家族・ご友人の皆様と共にご利用、ご支援の程お願い申し上げます。
       </div>
 
-      <a href="{{shop.url}}" class="media__btn community__home">ホームに戻る</a>
+      <a href="{{shop.url}}" class="media__btn community__home">TOPページ</a>
     </section>
 
 
