カートページの修正

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -4217,7 +4217,7 @@ th{
 
 /**カート */
 .cart_items_box {
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   letter-spacing: 2px;
   border-top: 1px solid rgb(200, 200, 200);
@@ -5681,4 +5681,15 @@ height: 1000px;
   color: #6f7d6d;
   border: 1px solid #6f7d6d;
   border-radius: 5px;
+}
+
+
+.cart_container{
+  width: 90%;
+}
+
+@media(max-width: 1200px){
+  .cart__inner{
+    width: 95%;
+  }
 }
