--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -1,5 +1,5 @@
-<div class="section_container Contents-wrap">
-        <div class="section_inner">
+<div class="section_container Contents-wrap cart_container">
+        <div class="section_inner cart__inner">
             <div class="section_title font01">カートの商品</div>
             <form method="post" class="cart_form">
             <div class="cart_items_box">
