カートページの修正

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -824,7 +824,7 @@ body {
           appearance: none;
   z-index: 99999;
   position: fixed;
-  top: 6.125vw;
+  top: 3.125vw;
   left: 3.125vw;
   width: 4.6875vw;
   height: 3.125vw;
@@ -3249,7 +3249,9 @@ th{
     margin-bottom: 1.6666666667vw;
   }
   .globalNav-2{
-    padding: 1.3194444444vw 2.8472222222vw 0vw 2.6388888889vw;
+    /* padding: 1.3194444444vw 2.8472222222vw 0vw 2.6388888889vw; */
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
   .globalNav-2 .menu{
     width: 50.7638888889vw;
@@ -5430,6 +5432,10 @@ textarea {
   .media__btn{
 	width: 140px;
 	height: 30px;
+}
+
+.slider-2{
+  height: 120vw;
 }
 
   .slider-2__text{
