施設案内に更新可能テキストを追加

--- a/sections/facility_images.liquid
+++ b/sections/facility_images.liquid
@@ -2,7 +2,7 @@
             <section class="thumbnail">
                 <ul class="thumbnail__list">
                     <li class="thumbnail__item">
-                        <a href="" class="thumbnail__link">
+                        <div class="thumbnail__link">
                             <img
                                  id="facility_image_clubhouse"
                                 src="{{section.settings.facility_image_clubhouse | img_url: '2000x'}}"
@@ -15,10 +15,11 @@
                                 <p class="thumbnail__ttl--en">club house</p>
                                 <p class="thumbnail__ttl--ja">クラブハウス</p>
                             </div>
-                        </a>
+                        </div>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                     </li>
                     <li class="thumbnail__item">
-                        <a href="" class="thumbnail__link">
+                        <div class="thumbnail__link">
                             <img
                                 id="facility_image_restaurant"
                                 src="{{section.settings.facility_image_restaurant | img_url: '2000x'}}"
@@ -31,10 +32,11 @@
                                 <p class="thumbnail__ttl--en">restaurant</p>
                                 <p class="thumbnail__ttl--ja">レストラン</p>
                             </div>
-                        </a>
+                        </div>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                     </li>
                     <li class="thumbnail__item">
-                        <a href="" class="thumbnail__link">
+                        <div class="thumbnail__link">
                             <img
                                   id="facility_image_lounge"
                                 src="{{section.settings.facility_image_lounge | img_url: '2000x'}}"
@@ -49,10 +51,11 @@
                                     ラウンジ「フォンテンブロウ」
                                 </p>
                             </div>
-                        </a>
+                        </div>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                     </li>
                     <li class="thumbnail__item">
-                        <a href="" class="thumbnail__link">
+                        <div class="thumbnail__link">
                             <img
                                   id="facility_image_bath"
                                 src="{{section.settings.facility_image_bath | img_url: '2000x'}}"
@@ -65,10 +68,11 @@
                                 <p class="thumbnail__ttl--en">Big bath</p>
                                 <p class="thumbnail__ttl--ja">大浴場</p>
                             </div>
-                        </a>
+                        </div>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                     </li>
                     <li class="thumbnail__item">
-                        <a href="" class="thumbnail__link">
+                        <div class="thumbnail__link">
                             <img
                                   id="facility_image_vip"
                                 src="{{section.settings.facility_image_vip | img_url: '2000x'}}"
@@ -83,10 +87,11 @@
                                     貴賓室「初紅葉」
                                 </p>
                             </div>
-                        </a>
+                        </div>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                     </li>
                     <li class="thumbnail__item">
-                        <a href="" class="thumbnail__link">
+                        <div class="thumbnail__link">
                             <img
                                   id="facility_image_course"
                                 src="{{section.settings.facility_image_course | img_url: '2000x'}}"
@@ -99,7 +104,8 @@
                                 <p class="thumbnail__ttl--en">Golf course</p>
                                 <p class="thumbnail__ttl--ja">ゴルフコース</p>
                             </div>
-                        </a>
+                        </div>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                     </li>
                 </ul>
             </section>
