--- a/templates/page.facilites.liquid
+++ b/templates/page.facilites.liquid
@@ -47,7 +47,7 @@
                         <li class="slider-3__item slider-3__item02">
                             <figure class="faci-post__figure">
                                 <img
-                                    src="{{'katada.jpg' | asset_img_url: '2000x'}}"
+                                    src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/797353059.jpg?v=1656986117"
                                     width="538"
                                     height="282"
                                     alt="KATADA Lodge & Villa"
@@ -66,7 +66,7 @@
                         <li class="slider-3__item slider-3__item03">
                             <figure class="faci-post__figure">
                                 <img
-                                    src="{{'katada.jpg' | asset_img_url: '2000x'}}"
+                                    src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/4138504708.jpg?v=1656986117"
                                     width="538"
                                     height="282"
                                     alt="KATADA Lodge & Villa"
@@ -85,7 +85,7 @@
                         <li class="slider-3__item slider-3__item04">
                             <figure class="faci-post__figure">
                                 <img
-                                    src="{{'katada.jpg' | asset_img_url: '2000x'}}"
+                                    src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/2174537890.jpg?v=1656986117"
                                     width="538"
                                     height="282"
                                     alt="KATADA Lodge & Villa"
