--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1844,7 +1844,7 @@ th {
 .thumbnail__item {
   position: relative;
   width: 44.375vw;
-  height: 27.96875vw;
+  /* height: 27.96875vw; */
   overflow: hidden;
 }
 
@@ -1862,8 +1862,7 @@ th {
 .thumbnail__link img {
   width: 100%;
   height: 100%;
-  transition: 1s;
-  filter: brightness(0.85);
+    filter: brightness(0.85);
 
 }
 
@@ -3034,11 +3033,11 @@ th{
   .thumbnail__item{
     width: 100%;
     max-width: 422px;
-    height: 266px;
+    /* height: 266px; */
   }
-  .thumbnail__link:hover img{
+  /* .thumbnail__link:hover img{
     transform: scale(1.2);
-  }
+  } */
   .thumbnail__ttl--en{
     margin-bottom: 8px;
     font-size: 1.3125rem;
@@ -3744,7 +3743,7 @@ th{
   }
   .thumbnail__item{
     max-width: 29.3055555556vw;
-    height: 18.4722222222vw;
+    /* height: 18.4722222222vw; */
   }
   .thumbnail__ttl--en{
     margin-bottom: 0.5555555556vw;
