施設案内ギャラリーにテキスト追加cssの修正

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1842,10 +1842,14 @@ th {
 }
 
 .thumbnail__item {
-  position: relative;
+  /* position: relative; */
   width: 44.375vw;
   /* height: 27.96875vw; */
   overflow: hidden;
+}
+
+.thumbnail__link{
+  position: relative;
 }
 
 .thumbnail__link:after {
