--- a/sections/facility_images.liquid
+++ b/sections/facility_images.liquid
@@ -16,7 +16,7 @@
                                 <p class="thumbnail__ttl--ja">クラブハウス</p>
                             </div>
                         </div>
-                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                        <p>プレイを終えたゴルファーのもうひとつの楽しみ クラブハウスでゆったりくつろぐ、贅沢なひととき。</p>
                     </li>
                     <li class="thumbnail__item">
                         <div class="thumbnail__link">
@@ -33,7 +33,7 @@
                                 <p class="thumbnail__ttl--ja">レストラン</p>
                             </div>
                         </div>
-                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                        <p>プレイを終えたゴルファーにとって、レストランでの食事はこの上ない楽しみのひとつ。洗練されたレストランで、素材にこだわった選りすぐりの味を。</p>
                     </li>
                     <li class="thumbnail__item">
                         <div class="thumbnail__link">
@@ -52,7 +52,7 @@
                                 </p>
                             </div>
                         </div>
-                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                        <p>満ち足りた一日が幕を下ろすとき、ゲストの皆様を温かく包み込んでくれるのがこのラウンジ。素晴らしい仲間とのクラブライフに乾杯！</p>
                     </li>
                     <li class="thumbnail__item">
                         <div class="thumbnail__link">
@@ -69,7 +69,7 @@
                                 <p class="thumbnail__ttl--ja">大浴場</p>
                             </div>
                         </div>
-                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                        <p>ラウンドでベストを尽くした後は、ゆったりとした大浴場へ直行。今日一日の爽やかな汗と心地よい疲労を流して、リフレッシュしてください。</p>
                     </li>
                     <li class="thumbnail__item">
                         <div class="thumbnail__link">
@@ -88,7 +88,7 @@
                                 </p>
                             </div>
                         </div>
-                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                        <p>東山魁夷の日本画「初紅葉」からその名をとった貴賓室。プライベート感を重視した気品あるスペシャルルームで、最上のくつろぎをご堪能ください。</p>
                     </li>
                     <li class="thumbnail__item">
                         <div class="thumbnail__link">
@@ -105,7 +105,7 @@
                                 <p class="thumbnail__ttl--ja">ゴルフコース</p>
                             </div>
                         </div>
-                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                        <p>7023ヤードというロングディスタンスのコースは、ベントのワングリーンや、そそり立つリベットバンカー、レンガに囲まれた大きな池など、美しさと戦略性が見事なバランスを保ち、プレイヤーの挑戦意欲を掻き立てます。</p>
                     </li>
                 </ul>
             </section>
