フッターロゴ修正

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1848,6 +1848,10 @@ th {
   overflow: hidden;
 }
 
+.thumbnail__item p{
+  margin-top: 15px;
+}
+
 .thumbnail__link{
   position: relative;
 }
@@ -5704,6 +5708,7 @@ height: 1000px;
 
 .copyright{
   /* margin-top: 18px; */
-  margin-top: 15px;
-  margin-bottom: 30px;
+  padding-top: 13px;
+  padding-bottom: 20px;
+  line-height: 1;
 }
