--- a/assets/story.css
+++ b/assets/story.css
@@ -787,7 +787,7 @@ a{
   }
   .tab-content__item--left{
     width: 100%;
-    height: 175px;
+    /* height: 175px; */
   }
   .tab-content__item--right{
     width: 100%;
