法人会員お問合せのリンクを追加会員お問合せのリンクを追加

--- a/templates/page.community.liquid
+++ b/templates/page.community.liquid
@@ -220,6 +220,7 @@
       </div>
 
       <a href="{{shop.url}}" class="media__btn community__home">TOPページ</a>
+      <a href="{{pages.contact.url}}" class="media__btn community__home">入会はこちらから</a>
     </section>
 
 
