ヘッダーロゴの位置調整と、つロゴの位置調整と、ついていな位置調整と、ついていないペ調整と、ついていないページに追加ついていないページに追加

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1212,10 +1212,13 @@ body {
 
 .brandLogo {
   width: 29.0625vw;
-  margin: 0 auto 6.8vw;
-  padding-top: 6.25vw;
   text-align: center;
   display: block;
+  transform: translateX(0%);
+  left: 35%;
+  top: 2%;
+  position: absolute;
+
 }
 
 .brandLogo img {
@@ -4336,6 +4339,7 @@ th{
 
 .cart_btn_box input {
   width: 48%;
+  line-height: 20px;
 }
 
 
@@ -5169,6 +5173,10 @@ textarea {
   flex-direction: row;
   justify-content: space-between;
 
+}
+
+.contact-form #contact-submit {
+  width: 100%;
 }
 
 @media(max-width: 560px){
