--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -1,5 +1,11 @@
   
-  
+              <a class="brandLogo" href="{{ shop.url }}">
+                <img
+                    src="{{ 'pageLogo-sp.png' | asset_img_url: '3000x'}}"
+                    alt="津カントリー倶楽部"
+                />
+            </a>
+
   
   <section class="2022_new_collection sec Contents-wrap">
 
