--- a/templates/page.contact.liquid
+++ b/templates/page.contact.liquid
@@ -1,3 +1,11 @@
+            <a class="brandLogo" href="{{ shop.url }}">
+                <img
+                    src="{{ 'pageLogo-sp.png' | asset_img_url: '3000x'}}"
+                    alt="津カントリー倶楽部"
+                />
+            </a>
+
+
 <div class="section_container Contact">
     <div class="section_inner">
         
@@ -57,7 +65,7 @@
             </div>
 
             <div class="contact_text font02">
-                <span id="c-red">※ご注文に関するお問い合わせには、必ず「ご注文者さまのお名前、お電話番号、ご注文番号」を記入くださいますようお願いいたします。</span>
+                {% comment %} <span id="c-red">※ご注文に関するお問い合わせには、必ず「ご注文者さまのお名前、お電話番号、ご注文番号」を記入くださいますようお願いいたします。</span> {% endcomment %}
                 <br><br>
                 お問い合わせいただいた内容によっては、回答をさしあげるのにお時間をいただくこともございます。営業日は平日9:00〜18:00（土日祝を除く）となるため、時間外のお問い合わせは翌営業日以降のご返信となりますのでご了承くださいませ。
             </div>
