--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -5,6 +5,14 @@
 
   
   <main class="product Contents-wrap">
+            <a class="brandLogo" href="{{ shop.url }}">
+                <img
+                    src="{{ 'pageLogo-sp.png' | asset_img_url: '3000x'}}"
+                    alt="津カントリー倶楽部"
+                />
+            </a>
+    
+
   {% comment %} バリエーションの実装 {% endcomment %}
   {% assign current_variant = product.selected_or_first_available_variant %}
   {% assign featured_image = current_variant.featured_image | default: product.featured_image %}
