記事更新と都の周辺CSS

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -2088,7 +2088,7 @@ th {
 .heading-lv1 {
   margin-bottom: 7.8vw;
   font-weight: 600;
-  font-size: 3.125vw;
+  font-size:  20px;
   letter-spacing: 0.1em;
 }
 
@@ -3180,7 +3180,7 @@ th{
     text-align: center;
   }
   .heading-lv2__wrap{
-    width: 800px;
+    width: 700px;
     margin: 0 auto 64px;
   }
   .heading-lv2{
@@ -5420,7 +5420,8 @@ textarea {
     height: 2px !important; 
   }
   .brandLogo{
-    width: 200px;
+    width:  35vw;
+    left: 34%;
   }
 }
 
@@ -5719,4 +5720,12 @@ height: 1000px;
   padding-top: 13px;
   padding-bottom: 20px;
   line-height: 1;
+}
+
+
+@media(max-width: 850px){
+
+  .blogMain{
+    margin-top: 25vw;
+  }
 }
