--- a/templates/article.liquid
+++ b/templates/article.liquid
@@ -1,10 +1,10 @@
-        <main>
             <p class="brandLogo">
                 <img
                     src="{{'pageLogo-sp.png' | asset_img_url : '2000x'}}"
                     alt="津カントリー倶楽部"
                 />
             </p>
+        <main class="blogMain">
             <section class="guidance">
                 <div class="guidance__ttl">
                     <h2 class="guidance__ttl--en">Guidance</h2>
