--- a/templates/blog.liquid
+++ b/templates/blog.liquid
@@ -1,11 +1,11 @@
 
-        <main>
             <p class="brandLogo">
                 <img
                     src="{{'pageLogo-sp.png' | asset_img_url : '2000x'}}"
                     alt="津カントリー倶楽部"
                 />
             </p>
+        <main  class="blogMain">
 
             {% if blog.handle == 'event' %}
 
