--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -4471,7 +4471,7 @@ th{
   padding-left: 40px;
   -webkit-box-pack: start;
   -ms-flex-pack: start;
-  justify-content: center;
+  /* justify-content: center; */
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
