施設ページの文字サイズ調整ページの文字サイズ調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1859,6 +1859,7 @@ th {
   position: relative;
 }
 
+
 .thumbnail__link:after {
   position: absolute;
   top: 0;
@@ -5731,5 +5732,12 @@ height: 1000px;
 
   .blogMain{
     margin-top: 25vw;
+  }
+}
+
+
+@media(max-width: 500px){
+  .thumbnail__item p{
+   font-size: 12px;
   }
 }
