ストーリーのボタンが近い問題の対応

--- a/assets/story.css
+++ b/assets/story.css
@@ -798,6 +798,7 @@ a{
     width: calc(100% - 40px);
     margin: 0 auto;
     text-align: left;
+    margin-bottom: 30px;
   }
   .top-message br{
     display: none;
